changed background on cards to fix display on system dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ a {
 }
 
 body {
-  background-color: #242424;
+  background-color: white;
   /* margin: 0; */
   /* display: flex; */
   /* place-items: center; */
